fix(tabs): enable scrollbar for mobile

--- a/src/css/tabs.scss
+++ b/src/css/tabs.scss
@@ -10,7 +10,7 @@ div:has(> .bt-tabs) {
   border-top: 1px solid var(--bt-tabs-border-color);
   border-left: 1px solid var(--bt-tabs-border-color);
   border-right: 1px solid var(--bt-tabs-border-color);
-  overflow-x: inherit;
+  overflow-y: hidden;
 
   & + div {
     margin-top: 0 !important;
